crates/compiler/tests/parse_errors/if_indent.txt
-- UNFINISHED IF -------------------------------------------------- src/Main.elm

I was expecting to see an `else` branch after this:

4|     if True then 1
                     ^
I know what to do when the condition is True, but what happens when it is False?
Add an else branch to handle that scenario!

